fix: subnav not visible #111
* fix: dep

* Revert "fix: dep"

This reverts commit ccd421ed8b93a1abb5b43d59ff9849e4e1d69c3a.

* fix: subnav not visible

--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -1,7 +1,7 @@
 @use 'sass:map';
 @use 'variables';
 
-.dc-root_wide-format {
+.dc-root_wide-format:not(.mobile) {
     .dc-doc-layout__right:has(.dc-subnavigation:only-child) {
         display: none;
     }
